Added authorization, user roles, validation and bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CodeKittenClientArea</title>
+  <title>Code Kitten Client Area</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+	<div class="container">
+		<%= render 'layouts/navigation' %>
+		<% flash.each do |key, value| %>
+	        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+	    <% end %>
 
-<%= yield %>
-
+		<%= yield %>
+	</div>
 </body>
 </html>
