--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Listing projects</h1>
+<div class="page-header">
+  <h1>Listing My Projects</h1>
+</div>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
