--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,12 +16,13 @@
     <ul class="nav navbar-nav">
       <% if user_signed_in? %>
         <li><%= link_to "Dashboard", root_path %></li>
+        <li><%= link_to "Invoices", invoices_path %></li>
       <% end %>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
-        <li><a>Welcome <%= current_user.first_name.titleize %></a></li>
+        <li><a>Welcome <%= current_user.first_name.titleize %>!</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account<b class="caret"></b></a>
           <ul class="dropdown-menu">
