--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,9 +2,21 @@
   <h1>Listing My Projects</h1>
 </div>
 
+
+<% if !@invoices.blank? %>
+  <div class="well">
+    <h3>You have <%= @invoices.count %> unpaid <%= "invoice".pluralize(@invoices.count) %>. Click <%= link_to "here", invoices_path %> to check it out</h3>
+  </div>
+<% end %>
+
+
 <table class="table">
   <thead>
     <tr>
+      <% if current_user.admin? %>
+        <th>Client</th>
+      <% end %>
+
       <th>Name</th>
       <th>Completed</th>
       <th colspan="3"></th>
@@ -14,11 +26,18 @@
   <tbody>
     <% @projects.each do |project| %>
       <tr>
+        <% if current_user.admin? %>
+          <td><%= project.user.business_name.titleize %></td>
+        <% end %>
+
         <td><%= project.name %></td>
         <td><%= project.completed %></td>
         <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+        <% if can? :manage, Project %>
+          <td><%= link_to 'Edit', edit_project_path(project) %></td>
+          <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +45,6 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<% if can? :create, Project %>
+  <%= link_to "New Project", new_project_path %>
+<% end %>
