Changed views, removed ability to mark invoice as paid, added pay button to go to a pay method to be handled by stripe, added paid at column for invoices table

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,8 +15,13 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <% if user_signed_in? %>
-        <li><%= link_to "Dashboard", root_path %></li>
-        <li><%= link_to "Invoices", invoices_path %></li>
+        <% if current_user.admin? %>
+          <!-- Show admin menu -->
+          <%= render 'layouts/admin_navigation' %>
+        <% else %>
+          <!-- Show client menu -->
+          <%= render 'layouts/client_navigation' %>
+        <% end %>
       <% end %>
     </ul>
 
