--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,31 +1,77 @@
-<h1>Listing invoices</h1>
+<div class="page-header">
+  <h1>My Invoices Awaiting Payment</h1>
+</div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Amount</th>
-      <th>Note</th>
-      <th>Paid</th>
-      <th>Project</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @invoices.each do |invoice| %>
+<% if !@active_invoices.blank? %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= invoice.amount %></td>
-        <td><%= invoice.note %></td>
-        <td><%= invoice.paid %></td>
-        <td><%= invoice.project.name %></td>
-        <td><%= link_to 'Show', invoice %></td>
-        <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-        <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Project Name</th>
+        <th>Note</th>
+        <th>Amount</th>    
+        <th>Paid</th>
+        
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @active_invoices.each do |invoice| %>
+        <tr>
+          <td><%= invoice.project.name %></td>
+          <td><%= invoice.note %></td>
+          <td>£<%= invoice.amount %></td>
+          <td><%= invoice.paid %></td>
+          <td><%= button_to 'Pay Invoice', root_path, method: :get, class: "btn btn-primary" %></td>
 
-<%= link_to 'New Invoice', new_invoice_path %>
+          <% if can? :manage, Invoice %>
+            <td><%= button_to 'Edit', edit_invoice_path(invoice), method: :get, class: "btn btn-primary" %></td>
+            <td><%= button_to 'Destroy', invoice, method: :delete, class: "btn btn-primary", data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <p>You have no invoices currently awaiting payment.</p>
+<% end %>
+
+<div class="page-header">
+  <h1>My Paid Invoices</h1>
+</div>
+
+<% if !@paid_invoices.blank? %>
+  <table class="table">
+      <thead>
+        <tr>
+          <th>Project Name</th>
+          <th>Note</th>
+          <th>Amount</th>    
+          <th>Paid</th>
+          
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @paid_invoices.each do |invoice| %>
+          <tr>
+            <td><%= invoice.project.name %></td>
+            <td><%= invoice.note %></td>
+            <td>£<%= invoice.amount %></td>
+            <td><%= invoice.paid_at.to_formatted_s(:long_ordinal) %></td>
+            <td><%= button_to 'Show', invoice, method: :get, class: "btn btn-primary" %></td>
+
+            <% if can? :manage, Invoice %>
+              <td><%= button_to 'Edit', edit_invoice_path(invoice), method: :get, class: "btn btn-primary" %></td>
+              <td><%= button_to 'Destroy', invoice, method: :delete, class: "btn btn-primary", data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+<% else %>
+  <p>You have no invoice history yet.</p>
+<% end %>
+
+
