--- a/app/views/layouts/_admin_navigation.html.erb
+++ b/app/views/layouts/_admin_navigation.html.erb
@@ -13,3 +13,11 @@
 		<li><%= link_to 'New Invoice', new_invoice_path %></li>
 	</ul>
 </li>
+
+<li class="dropdown">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Subscriptions<b class="caret"></b></a>
+	<ul class="dropdown-menu">
+		<li><%= link_to "All Subscription", subscriptions_path %></li>
+		<li><%= link_to 'New Subscription', new_subscription_path %></li>
+	</ul>
+</li>
