--- a/app/views/layouts/_client_navigation.html.erb
+++ b/app/views/layouts/_client_navigation.html.erb
@@ -1,2 +1,3 @@
 <li><%= link_to "Dashboard", root_path %></li>
 <li><%= link_to "Invoices", invoices_path %></li>
+<li><%= link_to "Subscriptions", subscriptions_path %></li>
